--- a/index.html
+++ b/index.html
@@ -29,11 +29,17 @@
         <h1>Послуги</h1>
         <div class="content">
             <b>Ремонт</b> <hr size="5" width="0.5px" noshade />
-            <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem libero quibusdam maxime modi ipsa animi doloribus ut at est sed, ab officia dolore, ea deleniti? A exercitationem modi hic voluptatibus?</h4>
-            <b>Обшивка</b> <hr size="5" width="0.5px" noshade />
-            <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos modi sit omnis totam ullam? Reiciendis in eos, similique consectetur ipsam voluptate laborum. Reiciendis consequuntur laudantium dolorem? Eos, illum eligendi? Officia.</h4>
-            <b>Покраска</b> <hr size="5" width="0.5px" noshade />
-            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat repudiandae ab, ducimus dignissimos sapiente? Voluptatibus nobis laudantium est ipsam, quia in dolor inventore accusantium nam excepturi, veniam facere quae!</h4>
+            <div class="container">
+                <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem libero quibusdam maxime modi ipsa animi doloribus ut at est sed, ab officia dolore, ea deleniti? A exercitationem modi hic voluptatibus?</h4>
+            </div>
+            <b>Обшивка:</b> <hr size="5" width="0.5px" noshade />
+            <div class="container">
+                <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos modi sit omnis totam ullam? Reiciendis in eos, similique consectetur ipsam voluptate laborum. Reiciendis consequuntur laudantium dolorem? Eos, illum eligendi? Officia.</h4>
+            </div>
+            <b>Покраска:</b> <hr size="5" width="0.5px" noshade />
+            <div class="container">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit placeat repudiandae ab, ducimus dignissimos sapiente? Voluptatibus nobis laudantium est ipsam, quia in dolor inventore accusantium nam excepturi, veniam facere quae!</h4>
+            </div>
         </div>
     </div>
     <div class="about">
